--- a/runelite-api/pom.xml
+++ b/runelite-api/pom.xml
@@ -69,6 +69,12 @@
 			<artifactId>slf4j-simple</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>com.github.joonasvali.naturalmouse</groupId>
+            <artifactId>naturalmouse</artifactId>
+            <version>2.0.3</version>
+        </dependency>
 	</dependencies>
 
 	<build>
